--- a/Css/style.css
+++ b/Css/style.css
@@ -38,6 +38,9 @@ body
     z-index: 99999;
 }
 
+::selection{
+    background-color: yellow;
+}
 #cookies{
 
      max-height:400px;
@@ -91,7 +94,12 @@ body
     top:4px;
     right:10px;
     cursor: pointer;
+    color:#ffffff;
     
+}
+
+#cookies #fr:hover{
+    color:rgba(255,255,255,0.5);
 }
 
 #cookies .cookbtn{
