--- a/Css/style.css
+++ b/Css/style.css
@@ -474,7 +474,8 @@ h3 {
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
-    height: 1100px;
+    height: 1500px;
+    padding:0px 40px;
 }
 
 .Projectsection h1 {
@@ -484,13 +485,49 @@ h3 {
     padding: 15px 0px;
 }
 
-footer {
-    background: black;
-    color: white;
-    padding: 9px 20px;
-    text-align: center;
-    width: 100%;
+.Projectsub{
+    color:#fff;
+    background-color: rgba(14, 105, 180, 1);
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: lighter;
+    /* padding:15px 20px; */
+    /* border:2px solid rgba(14, 105, 180, 0.877); */
+    border-radius: 20px;
+    margin: 20px auto;
+    /* text-shadow: 2px 2px 10px white; */
+    letter-spacing: 1px;
 }
+
+.Projectsection .Projectsub .headline{
+
+ 
+ color: #ffffff;
+ font-size: 2rem;
+ /* border:2px solid white; */
+ /* display: inline-block; */
+ font-weight: bolder;
+ border-radius: 10px;
+ font-family: 'Jost';
+ background-color: blue;
+ /* background-color: #ff5722;; */
+ padding: 5px;
+ margin: auto;
+ width: 100%;
+ text-shadow: 0 0 10px rgba(0,0,0,0.6);
+
+}
+
+.Projectsection .Projectsub .ProjectContent{
+  
+     padding: 5px;
+
+}
+
+.Projectsection .Projectsub .ProjectContent p{
+    font-size: 1.2rem;
+}
+
+
 
 #backtotop{
     position: fixed;
@@ -709,6 +746,18 @@ footer {
     background-color: green;
 }
 
+.btn4{
+    /* background-color: #d63031 !important; */
+    background-color: yellow !important;
+    color:black !important;
+}
+.btn4:hover{
+    background: transparent !important;
+    border: 1px solid white;
+    color:#ffffff !important;
+}
+
+
 #my-form-status
 {
     color:black;
@@ -717,28 +766,22 @@ footer {
     left:40%;
 }
 
-.Projectsection{
-    padding:0px 40px;
-    
-}
-.Projectsub{
-    color:#fff;
-    background-color: rgba(14, 105, 180, 1);
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: lighter;
-    padding:15px 20px;
-    border:2px solid rgba(14, 105, 180, 0.877);
-    border-radius: 20px;
-    margin: 20px auto;
-    text-shadow: 2px 2px 10px white;
-    letter-spacing: 1px;
-}
+
 .percentage{
     opacity: 0;
 }
 .percentage:hover{
     cursor: pointer;
     opacity: 1;
+}
+
+
+footer {
+    background: black;
+    color: white;
+    padding: 9px 20px;
+    text-align: center;
+    width: 100%;
 }
 
 
@@ -788,9 +831,15 @@ footer {
    
     
     .Projectsection{
-        height: 1400px;
+        height: 1700px;
     }  
 
+}
+
+@media screen and (max-width:580px) {
+    .Projectsection{
+        height: 1900px;
+    }
 }
 
 @media screen and (max-width: 480px)
@@ -798,7 +847,7 @@ footer {
 
     
     .Projectsection{
-        height: 1700px;
+        height: 2200px;
     }  
 
 
@@ -920,16 +969,13 @@ footer {
     }    
     .Projectsub{
         font-size: 1rem;
-        padding:5px 10px;
+        
     }  
-    
+
+    .Projectsection{
+        height: 2600px;
+    }
     
    
 }
 
-@media screen and (max-width:350px){
-    
-    .Projectsection{
-        height: 1900px;
-    }  
-}
